helm/traefik/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-traefik
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
#  ingressClassName: traefik
  rules:
    - host: "hello-world.local"  #<-- See here
      http:
        paths:
          - path: /traefik #<-- See here
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
